--- a/index.html
+++ b/index.html
@@ -19,40 +19,40 @@
         </div>
         <div id="keyboard">
             <div>
-                <button onclick="input_letter('q')">Q</button>
-                <button onclick="input_letter('w')">W</button>
-                <button onclick="input_letter('e')">E</button>
-                <button onclick="input_letter('r')">R</button>
-                <button onclick="input_letter('t')">T</button>
-                <button onclick="input_letter('y')">Y</button>
-                <button onclick="input_letter('u')">U</button>
-                <button onclick="input_letter('i')">I</button>
-                <button onclick="input_letter('o')">O</button>
-                <button onclick="input_letter('p')">P</button>
+                <button id="keyboard_q">Q</button>
+                <button id="keyboard_w">W</button>
+                <button id="keyboard_e">E</button>
+                <button id="keyboard_r">R</button>
+                <button id="keyboard_t">T</button>
+                <button id="keyboard_y">Y</button>
+                <button id="keyboard_u">U</button>
+                <button id="keyboard_i">I</button>
+                <button id="keyboard_o">O</button>
+                <button id="keyboard_p">P</button>
             </div>
             <div>
                 <span class="spacer"></span>
-                <button onclick="input_letter('a')">A</button>
-                <button onclick="input_letter('s')">S</button>
-                <button onclick="input_letter('d')">D</button>
-                <button onclick="input_letter('f')">F</button>
-                <button onclick="input_letter('g')">G</button>
-                <button onclick="input_letter('h')">H</button>
-                <button onclick="input_letter('j')">J</button>
-                <button onclick="input_letter('k')">K</button>
-                <button onclick="input_letter('l')">L</button>
+                <button id="keyboard_a">A</button>
+                <button id="keyboard_s">S</button>
+                <button id="keyboard_d">D</button>
+                <button id="keyboard_f">F</button>
+                <button id="keyboard_g">G</button>
+                <button id="keyboard_h">H</button>
+                <button id="keyboard_j">J</button>
+                <button id="keyboard_k">K</button>
+                <button id="keyboard_l">L</button>
                 <span class="spacer"></span>
             </div>
             <div>
-                <button onclick="enter()">Enter</button>
-                <button onclick="input_letter('z')">Z</button>
-                <button onclick="input_letter('x')">X</button>
-                <button onclick="input_letter('c')">C</button>
-                <button onclick="input_letter('v')">V</button>
-                <button onclick="input_letter('b')">B</button>
-                <button onclick="input_letter('n')">N</button>
-                <button onclick="input_letter('m')">M</button>
-                <button onclick="input_backspace()">
+                <button id="keyboard_enter">Enter</button>
+                <button id="keyboard_z">Z</button>
+                <button id="keyboard_x">X</button>
+                <button id="keyboard_c">C</button>
+                <button id="keyboard_v">V</button>
+                <button id="keyboard_b">B</button>
+                <button id="keyboard_n">N</button>
+                <button id="keyboard_m">M</button>
+                <button id="keyboard_backspace">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                     <path fill="var(--color-tone-1)" d="M22 3H7c-.69 0-1.23.35-1.59.88L0 12l5.41 8.11c.36.53.9.89 1.59.89h15c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H7.07L2.4 12l4.66-7H22v14zm-11.59-2L14 13.41 17.59 17 19 15.59 15.41 12 19 8.41 17.59 7 14 10.59 10.41 7 9 8.41 12.59 12 9 15.59z"></path>
                   </svg>
