空のときの表示追加

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="title">DIFFLE</h1>
         </header>
         <div id="board">
-            <div id="input_row" class="guess"></div>
+            <div id="input_row" class="guess empty"></div>
         </div>
         <div id="keyboard">
             <div>
