アラートなど微修正

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="input_row" class="guess empty"></div>
         </div>
         <div id="result" style="display: none;">
-            <div style="display: flex; flex-flow: row; justify-content: space-around; align-items: flex-end;">
+            <div style="display: flex; flex-flow: row; justify-content: space-around; align-items: flex-end;  margin-bottom: 2rem;">
                 <div class="letter_count">
                     <div id="letters_used"></div>
                     <div><span class="letter_count_label">Letters<br>Used</span></div>
