--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </label>
             </header>
 
-            <p>This game is inspired by Wordle.</p>
+            <p>This game is inspired by <a href="https://www.powerlanguage.co.uk/wordle/">Wordle</a>.</p>
 
             <p>Guess the word using as less total letters as possible.</p>
 
