--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         </div>
         <div id="result" style="display: none;">
             <div style="display: flex; flex-flow: row; justify-content: space-around; align-items: flex-end;  margin-bottom: 2rem;">
-                <div class="letter_count">
-                    <div id="letters_used"></div>
-                    <div><span class="letter_count_label">Letters<br>Used</span></div>
+                <div class="result_count">
+                    <div id="words_used"></div>
+                    <div><span class="result_count_label" id="words_used_label">Words<br>Used</span></div>
                 </div>
                 <div class="slash"></div>
-                <div class="letter_count">
-                    <div id="letters_answer"></div>
-                    <div><span class="letter_count_label">Letters<br>Answer</span></div>
+                <div class="result_count">
+                    <div id="letters_used"></div>
+                    <div><span class="result_count_label">Letters<br>Used</span></div>
                 </div>
             </div>
 
