--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </div>
         </div>
     </div>
-
+    <div id="alert">not in word list</div>
     <script src="data.js"></script>
     <script src="main.js"></script>
 </body>
