--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="wrapper">
-        <header>
-            <h1 class="title">DIFFLE</h1>
+        <header class="title">
+            <h1>DIFFLE</h1>
             <label for="open_help" style="position: absolute; left: 0;">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                     <path fill="#878a8c"
@@ -28,31 +28,33 @@
                 </svg>
             </label>
         </header>
-        <div id="board">
-            <div id="input_row" class="guess empty"></div>
-        </div>
-        <div id="result" style="display: none;">
-            <div
-                style="display: flex; flex-flow: row; justify-content: space-around; align-items: flex-end;  margin-bottom: 2rem;">
-                <div class="result_count">
-                    <div id="words_used"></div>
-                    <div><span class="result_count_label" id="words_used_label">Words<br>Used</span></div>
-                </div>
-                <div class="slash"></div>
-                <div class="result_count">
-                    <div id="letters_used"></div>
-                    <div><span class="result_count_label">Letters<br>Used</span></div>
-                </div>
+        <div id="game">
+            <div id="board">
+                <div id="input_row" class="guess empty"></div>
             </div>
-            <div class="share">
-                <button id="share_button">
-                    Share
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-                        <path fill="white"
-                            d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92c0-1.61-1.31-2.92-2.92-2.92zM18 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM6 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm12 7.02c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z">
-                        </path>
-                    </svg>
-                </button>
+            <div id="result" style="display: none;">
+                <div
+                    style="display: flex; flex-flow: row; justify-content: space-around; align-items: flex-end;  margin-bottom: 2rem;">
+                    <div class="result_count">
+                        <div id="words_used"></div>
+                        <div><span class="result_count_label" id="words_used_label">Words<br>Used</span></div>
+                    </div>
+                    <div class="slash"></div>
+                    <div class="result_count">
+                        <div id="letters_used"></div>
+                        <div><span class="result_count_label">Letters<br>Used</span></div>
+                    </div>
+                </div>
+                <div class="share">
+                    <button id="share_button">
+                        Share
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                            <path fill="white"
+                                d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92c0-1.61-1.31-2.92-2.92-2.92zM18 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM6 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm12 7.02c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z">
+                            </path>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
         <div id="keyboard">
