アイコン位置修正とか

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="wrapper">
         <header class="title">
             <h1>DIFFLE</h1>
-            <label for="open_help" style="position: absolute; left: 0;">
+            <label for="open_help" style="position: absolute; left: 1rem;">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                     <path fill="#878a8c"
                         d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z">
                     </path>
                 </svg>
             </label>
-            <label for="open_stats" style="position: absolute; right: 0;">
+            <label for="open_stats" style="position: absolute; right: 1rem;">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                     <path fill="#878a8c"
                         d="M16,11V3H8v6H2v12h20V11H16z M10,5h4v14h-4V5z M4,11h4v8H4V11z M20,19h-4v-6h4V19z"></path>
@@ -107,7 +107,7 @@
         <div id="help">
             <header>
                 <h2>How To Play</h2>
-                <label for="close_help" style="position: absolute; right: 0;">
+                <label for="close_help" style="position: absolute; right: 1rem;">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                         <path fill="#878a8c"
                             d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
@@ -198,7 +198,7 @@
         <div id="stats">
             <header>
                 <h2>Statistics</h2>
-                <label for="close_stats" style="position: absolute; right: 0;">
+                <label for="close_stats" style="position: absolute; right: 1rem;">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                         <path fill="#878a8c"
                             d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
