--- a/index.html
+++ b/index.html
@@ -47,10 +47,16 @@
                 </div>
                 <div class="share">
                     <button id="share_button">
-                        Share
+                        Share 
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                             <path fill="white"
                                 d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92c0-1.61-1.31-2.92-2.92-2.92zM18 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM6 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm12 7.02c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z">
+                            </path>
+                        </svg>
+                    </button>
+                    <button id="share_image_button">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                            <path fill="white"d="M 3,2.2 C 2.4,2.2 2.2,2.4 2.2,3 v 18 c 0,0.4 0.4,0.8 0.8,0.8 6.3390531,0.0035 12.771724,0 18.2,0 0.4,0 0.805043,-0.4 0.8,-0.803858 V 3 C 22,2.6 21.6,2.2 21.2,2.2 Z m 0.8,1.6 h 16.6 l 0,7.2 c 0,0 -1.661821,-1.6523545 -2,-2 -0.338179,-0.3476455 -0.857547,-0.3238834 -1.2,0 -0.342453,0.3238834 -5.985156,6.080078 -5.985156,6.080078 L 9,13 C 8.6837695,12.684374 8.1162305,12.684374 7.8,13 l -4,4 z m 4,1.4 c -1.4429284,0 -2.6,1.1547756 -2.6,2.6 0,1.4452243 1.1570716,2.6 2.6,2.6 1.4429285,0 2.6,-1.1547757 2.6,-2.6 0,-1.4452244 -1.1570715,-2.6 -2.6,-2.6 z m 0,1.6 c 0.6,0 1,0.4 1,1 0,0.6 -0.4,1 -1,1 -0.6,0 -1,-0.4 -1,-1 0,-0.6 0.4,-1 1,-1 z m 10,4 2.6,2.6 0,6.8 H 3.8 l 0,-1 4.6,-4.6 2.2,2.2 c 0.31623,0.315626 0.88377,0.315626 1.2,0 z">
                             </path>
                         </svg>
                     </button>
