--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
             <p>This game is inspired by <a href="https://www.powerlanguage.co.uk/wordle/">Wordle</a>.</p>
 
-            <p>Guess the word using as less total letters as possible.</p>
+            <p>Guess the word using as few letters as possible.</p>
 
             <p>Each guess must be a valid word. Hit the enter button to submit.</p>
 
